2006-11-16  Wim Taymans  <wim@fluendo.com>

	* README:
	* src/com/fluendo/player/Cortado.java: (Cortado),
	(Cortado..getParameterInfo), (Cortado..init):
	* src/com/fluendo/player/Status.java: (Status),
	(Status.paintPercent), (Status.paintButton1), (Status.paintTime),
	(Status.paintSpeaker), (Status.paint), (Status.setMessage),
	(Status.setHaveAudio), (Status.setHavePercent),
	(Status.setSeekable), (Status.mousePressed),
	(Status.mouseReleased):
	Added a live property to disable PAUSE.

2006-11-16  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/plugin/OggDemux.java:
	(OggDemux.....OggStream.reStart):
	Stream time starts from 0

2006-11-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* build.xml:
	* scripts/update-source-info:
	  ready for automated building

2006-11-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* cortado.spec:
	  delete
	* cortado.spec.in:
	  template for cortado.spec
	* scripts/update-spec-file:
	  add a script to generate cortado.spec from template, filling
	  in Version and Release information
	  Use Release tag to keep track of svn revision, branch and status
	  if the nano is set
	* build.xml:
	  add a spec target

2006-11-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* scripts/update-source-info:
	  add a script to generate src/com/fluendo/jst/SourceInfo.java
	  This file describes the repository version of the source code.
	* build.xml:
	  use the new script to generate SourceInfo.java
	* src/com/fluendo/player/Cortado.java:
	(Cortado.AboutFrame.AboutFrame):
	  Get the source info and display it
	This makes sure that a cortado built from a dist still has this
	revision information

2006-11-03  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/plugin/HTTPSrc.java: (HTTPSrc.Pad),
	(HTTPSrc.openWithConnection), (HTTPSrc.openWithSocket):
	Set default contentLength to -1 and take care we don't use invalid
	contentLength.

2006-11-02  Wim Taymans  <wim@fluendo.com>
